# bedrock-backend

./: [[B[B  [[B[B.pub  requirements.txt
djangoProject/: settings.py  urls.py
graph-api/: api-endpoints.py  docker-compose.yml  pyproject.toml  simple_graph.py
notes/: models.py
notes/migrations/: 0001_initial.py
users/: managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py
