[tool.poetry]
name = "beetlejuice"
version = "0.1.0"
description = ""
authors = ["Daniiar <daniyarflash.m01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
matplotlib = "^3.8.0"
fastapi = {extras = ["all"], version = "^0.103.1"}
databases = {extras = ["asyncpg"], version = "^0.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
